--- a/DAY2/005.html
+++ b/DAY2/005.html
@@ -11,6 +11,11 @@
     <!-- 제목태그는 H1~h6까지 있다 -->
     <!-- 1~6까지 출력하려면 h1*6 -->
     <!-- 한번에 여러개의 같은 값을 넣으려면 컨트롤 알트 쉬프트 -->
+    <!--html 요소는 디자인을 가진다.
+            1. h요소는 한줄을 차지한다
+            2. margin을 가진다.
+            
+            처음에 html 요소는 디자인 기능을 담당했으나 현재는 css로 디자인을 작업헌다.-->
     <h1>제목</h1>
     <h2>제목</h2>
     <h3>제목</h3>
