--- a/DAY2/006.html
+++ b/DAY2/006.html
@@ -12,7 +12,7 @@
         }
 
         /* 가운데 정렬을 하려면 text-align속성을 center로 준다
-            p의 색을 오랜지, 가운데 정렬하시요 */
+            p의 색을 오랜지, 가운데 정렬하시요 em은 문서 전체의 크기를 키우는것*/
         P {
             color: orange;
             text-align: center;
