--- a/DAY2/007.html
+++ b/DAY2/007.html
@@ -24,6 +24,10 @@
     <!-- 이미지를 너비 15px로 출력하고 클릭하면 네이버로 이동 -->
     <a href="http://www.naver.com">
         <img src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fi.pinimg.com%2F736x%2Fe2%2Fdb%2F03%2Fe2db03456aa98acbe13e96a72abd0474--pochacco-wallpaper-kawaii.jpg&type=a340"
+            alt="포차코" style="width: 100px;">
+    </a>
+    <a href="http://www.naver.com">
+        <img src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fi.pinimg.com%2F736x%2Fe2%2Fdb%2F03%2Fe2db03456aa98acbe13e96a72abd0474--pochacco-wallpaper-kawaii.jpg&type=a340"
             alt="포차코" style="width: 150px;">
     </a>
 </body>
