--- a/DAY3/007.html
+++ b/DAY3/007.html
@@ -17,6 +17,8 @@
     </a>
     <a href="C:\HTML\ex01\007-2.html">007-2로 이동
     </a>
+    <a href="ex01\007-2.html">007-2로 이동
+    </a>
 </body>
 
 </html>
