--- a/DAY5/002.html
+++ b/DAY5/002.html
@@ -23,6 +23,16 @@
 </head>
 
 <body>
+    <!-- CDN : css js 에서 외부 라이브러리를 링트로 포함시키는 방법 
+         bootstrap은 절대값이 상대값으로 너비, 높이 ,마진 등을 지정-->
+    <div style="padding: 20px;">
+        <button type="button" class="btn btn-dark">버튼</button>
+    </div>
+    <div class="container">
+        <div class="d-grid mb-s mt-4">
+            <button type="button" class="btn btn-primary btn-block btn-dark mt-3">Full-Width Button</button>
+        </div>
+    </div>
 
 </body>
 
